# A2A-multimodal-deepagent-chat

./: .gitignore  README.md
architecture/: mcp-auth-design.md
docling_ingestion/: pyproject.toml
docling_ingestion/src/: chunker.py  converter.py  embedder.py  main.py  object_store_client.py  seaweedfs_client.py  weaviate_client.py
mcp_tools/src/: server.py
mcp_tools/src/tools/: duckduckgo.py  image_store.py  media_store.py  minio_store.py  object_detection.py  seaweedfs_uploader.py  (+7 more)
multimodal_chat_frontend/: .env.example  README.md
multimodal_chat_frontend/client/: index.html  package.json  vite.config.js
multimodal_chat_frontend/server/: a2aClient.js  index.js  objectStore.js  package-lock.json  package.json
multimodal_deepagent/: README.md  pyproject.toml
multimodal_deepagent/src/: main.py  test_client.py
multimodal_deepagent/src/multimodal_agent/: __init__.py  agent.py  agent_executor.py  minio_uploader.py
multimodal_deepagent/src/multimodal_agent/a2a_executor/: __init__.py  agent_executor.py
multimodal_deepagent/src/multimodal_agent/agent/: __init__.py  agent.py  content_builders.py  doc_converter.py  media.py  middleware.py  tools.py
multimodal_deepagent/src/multimodal_agent/backends/: __init__.py  object_store_backend.py
multimodal_deepagent/src/multimodal_agent/configs/: __init__.py  config.py
multimodal_deepagent/src/multimodal_agent/utils/: object_store_uploader.py  seaweedfs_uploader.py
multimodal_deepagent/src/skills/knowledge_base_search/: SKILL.md
multimodal_deepagent/src/skills/uploaded_files/: SKILL.md
seaweedfs/: s3.conf
(+10 files in other folders)
